// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card[Base] should render correct 1`] = `
<div>
  <div
    className="so-card"
    style={
      Object {
        "display": "inline-flex",
        "height": 300,
        "marginRight": 20,
        "width": 240,
      }
    }
  >
    <div
      className="so-card-header"
    >
      Header
    </div>
    <div
      className="so-card-body"
    >
      Body
    </div>
    <div
      className="so-card-footer"
    >
      Footer
    </div>
  </div>
  <div
    className="so-card"
    style={
      Object {
        "display": "inline-flex",
        "height": 300,
        "marginRight": 20,
        "width": 240,
      }
    }
  >
    <div
      className="so-card-header"
      style={
        Object {
          "background": "#f7f7f7",
        }
      }
    >
      Header
    </div>
    <div
      className="so-card-body"
    >
      Body
    </div>
    <div
      className="so-card-footer"
      style={
        Object {
          "background": "#f7f7f7",
        }
      }
    >
      Footer
    </div>
  </div>
</div>
`;

exports[`Card[Shallow] should render correct 1`] = `
<div>
  <div
    className="so-card"
    style={
      Object {
        "display": "inline-flex",
        "marginRight": 20,
        "width": 140,
      }
    }
  >
    <div
      className="so-card-body"
    >
      Never
    </div>
  </div>
  <div
    className="so-card so-card-hover"
    style={
      Object {
        "display": "inline-flex",
        "marginRight": 20,
        "width": 140,
      }
    }
  >
    <div
      className="so-card-body"
    >
      Hover
    </div>
  </div>
  <div
    className="so-card so-card-shadow"
    style={
      Object {
        "display": "inline-flex",
        "marginRight": 20,
        "width": 140,
      }
    }
  >
    <div
      className="so-card-body"
    >
      Always
    </div>
  </div>
</div>
`;
